--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,20 @@
-.card{
+/* .card{
     background-color: "#AD36CB";
     color: "white";
   }
+  .card-body {
+    min-height: 300px;
+    min-width: 300px;
+    margin-right: 5px;
+} */
+.card-container {
+  overflow-x: auto;
+  white-space: nowrap;
+  border: 2px solid yellow;
+
+}
+
+.card-scrollable {
+  display: inline-flex;
+  flex-wrap: nowrap;
+}
